<resources>
    <string name="app_name">My Api</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="registro">Registrarse</string>
    <string name="secret_respuesta">Respuesta secreta</string>
    <string name="event_title">Título del evento</string>
    <string name="event_date">Fecha del evento</string>
    <string name="event_description">Descripción del evento</string>
    <string name="event_location">Ubicación del evento</string>
    <string name="event_reminder_time">Tiempo de aviso (minutos)</string>
    <string name="add_event">Agregar Evento</string>
    <string name="title_info_event">Titulo:</string>
    <string name="description_info_event">Descripción:</string>
    <string name="location_info_event">Ubicación:</string>
    <string name="date_info_event">Fecha:</string>
    <string name="reminder_info_event">Tiempo de aviso (minutos):</string>
    <string name="delete_info_event">Eliminar</string>
    <string name="close_info_event">Cerrar</string>
    <string name="crear_evento_list_events">Crear Evento</string>
    <string name="toast_delete_event">El evento se ha eliminado</string>
    <string name="toast_error_delete_event">No se ha podido eliminar el evento</string>
    <string name="toast_export_data_success">Archivo CSV exportado con éxito en Descargas</string>
    <string name="toast_export_data_error">Error al exportar el archivo CSV</string>
    <string name="toast_user_already_exist">Este usuario ya existe</string>
    <string name="toast_user_register">Usuario registrado con éxito</string>
    <string name="toast_error_login">Usuario o contraseña incorrectos</string>
    <string name="btn_text_open_spinner">Opciones</string>
    <string name="spinner_initial_option">Selecciona una opción</string>
    <string name="spinner_option_export_data">Exportar datos</string>
    <string name="spinner_option_delete_account">Eliminar cuenta</string>
    <string name="spinner_option_reset_password">Cambiar contraseña</string>
    <string name="spinner_option_logout">Cerrar sesión</string>
    <string name="toast_delete_user_success">Se ha eliminado el usuario</string>
    <string name="toast_error_delete_user">No se ha podido eliminar el usuario</string>
    <string name="toast_error_dont_match">Las contraseñas no coinciden, intetalo de nuevo</string>
    <string name="toast_error_input_not_empty">El campo no debe estar vacío</string>
    <string name="toast_reset_password_success">Se ha cambiado la contraseña exitosamente</string>
    <string name="et_new_password">Nueva contraseña</string>
    <string name="et_new_password_confirm">Confirmar nueva contraseña</string>
    <string name="btn_confirm_new_password">Cambiar contraseña</string>
    <string name="alert_dialog_title">Deseas continuar?</string>
    <string name="alert_dialog_description">Si aceptas, perderas toda tu información</string>
    <string name="alert_dialog_button_confirm">Aceptar</string>
    <string name="alert_dialog_button_cancel">Cancelar</string>
    <string name="error_dont_match_secret_response">Tu respuesta no coincide</string>
</resources>
