<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewInfoEvent"
    android:padding="24dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_marginBottom="12dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">
                <TextView
                    android:id="@+id/infoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_info_event"/>
                <TextView
                    android:id="@+id/infoDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description_info_event"/>
                <TextView
                    android:id="@+id/infoLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_info_event"/>
                <TextView
                    android:id="@+id/infoDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_info_event"/>
                <TextView
                    android:id="@+id/infoReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder_info_event"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="horizontal"
        android:padding="12dp">
        <Button
            android:id="@+id/btnDeleteEvent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_info_event"
            android:backgroundTint="#D9090F"
            android:layout_marginRight="4dp"/>
        <Button
            android:id="@+id/btnCloseInfo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/close_info_event"
            android:layout_marginLeft="4dp"/>
    </LinearLayout>


</LinearLayout>